# cargo

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/utils/: callback-wrapper.hpp  channel.cpp  channel.hpp  credentials.cpp  credentials.hpp  daemon.cpp  environment.cpp  eventfd.cpp  exception.cpp  exception.hpp  execute.cpp  fd-utils.cpp  fd-utils.hpp  file-wait.cpp  fs.cpp  fs.hpp  img.cpp  inotify.cpp  scoped-dir.cpp  scoped-gerror.cpp  signal.cpp  signal.hpp  signalfd.cpp  signalfd.hpp  smack.cpp  smack.hpp  text.hpp  value-latch.hpp  vt.cpp
doc/: cargo_usage.md  doxygen.cfg  header.html
libs/cargo/: CMakeLists.txt  libcargo.pc.in
libs/cargo-fd/: CMakeLists.txt
libs/cargo-gvariant/: CMakeLists.txt
libs/cargo-ipc/: CMakeLists.txt
libs/cargo-ipc/epoll/: event-poll.cpp
libs/cargo-ipc/internals/: socket.cpp
libs/cargo-json/: CMakeLists.txt  cargo-json.hpp  libcargo-json.pc.in
libs/cargo-sqlite/: CMakeLists.txt
libs/cargo-sqlite-json/: cargo-sqlite-json.hpp
libs/cargo-validator/: CMakeLists.txt  validator.hpp
libs/cargo-validator/internals/: validator-visitor.hpp
libs/logger/: CMakeLists.txt  libLogger.pc.in
packaging/: cargo.spec
tests/: CMakeLists.txt
tests/cppcheck/: cppcheck.sh  cppcheck.suppress
tests/scripts/: cargo_all_tests.py  cargo_launch_test.py  cargo_test_parser.py
tests/unit_tests/: CMakeLists.txt  ut.cpp
tests/unit_tests/cargo/: ut-cargo.cpp
tests/unit_tests/cargo-ipc/: ut-ipc.cpp  ut-socket.cpp
tests/unit_tests/configs/: CMakeLists.txt
tests/unit_tests/configs/systemd/: cargo-socket-test.service.in  cargo-socket-test.socket
tests/unit_tests/epoll/: ut-event-poll.cpp
tests/unit_tests/socket_test_service/: socket-test.cpp  socket-test.hpp
tests/unit_tests/utils/: ut-fs.cpp  ut-inotify.cpp
